--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head> Cheryl L. Wilks
 <body>
     <h1></h1>
