--- a/index.html
+++ b/index.html
@@ -8,23 +8,41 @@
     <title>Cheryl Stuff\</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+<body>
 
-<header>
+    <header>
+        Header
+    </header>
+    <nav>nav</nav>
+    <section>
+        section
+        <article>
+            article
+            <div>
+                h1, h2, h3
+            </div>
+            <div>
+                p
+            </div>
+        </article>
+    </section>
+    <aside>aside</aside>
+    <footer>footer</footer>
+
+<!-- <header>
     <div class="header-box">
         <h1>Cheryl Wilks</h1>
     </div>
-
     <ul>
         <li><a href="#">About</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
 </header>
-
-<body>
     <h1> About Me</h1>
     <P>
     </P>
-        <img id="self-potraits" src="assets/images/">
+ <img id="self-potraits" src="assets/images/"> -->
+
 </body>
 </html>
